<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/imgur"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pagelayoutid"
        android:background="@drawable/btn_design_purple"
        android:layout_margin="20dp"
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:id="@+id/mayurico"
                android:src="@drawable/ganesh999"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logo_of_project" />

       <!--     <TextView
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />-->

            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:textSize="18sp"
                android:textColor="#B271AF"
                android:textAlignment="center"


                android:text="@string/enter_phone_number_here_to_n_login_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

        </LinearLayout>
        <EditText
            android:id="@+id/phoneid"
            android:drawablePadding="10dp"

            android:layout_marginTop="30dp"
            android:padding="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:inputType="phone"
            android:background="#1F032E"
            android:hint="@string/enter_your_phone"
            android:maxLines="1"
            android:maxEms="10"
            android:maxLength="10"

            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />



        <Button
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/btnSubmit"
            android:background="@drawable/btn_design_white"
            android:elevation="15dp"
            android:text="Submit"
            android:textColor="#220A21"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

<TextView
    android:padding="5dp"
    android:layout_margin="30dp"
    android:textSize="15sp"
    android:textAlignment="center"
    android:text="SupremPower Solutions"
    android:textColor="#A6EFEF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" />

</LinearLayout>